Change LoginView and maintain remember me + add javafx options to client pom.xml